Working on titanic datset through KMeans Algorithm

--- a/practicalML/titanic_sklearn_MeanShift.ipynb
+++ b/practicalML/titanic_sklearn_MeanShift.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -91,7 +91,6 @@
        "      <th></th>\n",
        "      <th>pclass</th>\n",
        "      <th>survived</th>\n",
-       "      <th>name</th>\n",
        "      <th>sex</th>\n",
        "      <th>age</th>\n",
        "      <th>sibsp</th>\n",
@@ -101,7 +100,6 @@
        "      <th>cabin</th>\n",
        "      <th>embarked</th>\n",
        "      <th>boat</th>\n",
-       "      <th>body</th>\n",
        "      <th>home.dest</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -110,7 +108,6 @@
        "      <th>0</th>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>Allen, Miss. Elisabeth Walton</td>\n",
        "      <td>female</td>\n",
        "      <td>29.0000</td>\n",
        "      <td>0</td>\n",
@@ -120,14 +117,12 @@
        "      <td>B5</td>\n",
        "      <td>S</td>\n",
        "      <td>2</td>\n",
-       "      <td>0</td>\n",
        "      <td>St Louis, MO</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>Allison, Master. Hudson Trevor</td>\n",
        "      <td>male</td>\n",
        "      <td>0.9167</td>\n",
        "      <td>1</td>\n",
@@ -137,14 +132,12 @@
        "      <td>C22 C26</td>\n",
        "      <td>S</td>\n",
        "      <td>11</td>\n",
-       "      <td>0</td>\n",
        "      <td>Montreal, PQ / Chesterville, ON</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>Allison, Miss. Helen Loraine</td>\n",
        "      <td>female</td>\n",
        "      <td>2.0000</td>\n",
        "      <td>1</td>\n",
@@ -154,14 +147,12 @@
        "      <td>C22 C26</td>\n",
        "      <td>S</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>Montreal, PQ / Chesterville, ON</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>Allison, Mr. Hudson Joshua Creighton</td>\n",
        "      <td>male</td>\n",
        "      <td>30.0000</td>\n",
        "      <td>1</td>\n",
@@ -171,14 +162,12 @@
        "      <td>C22 C26</td>\n",
        "      <td>S</td>\n",
        "      <td>0</td>\n",
-       "      <td>135</td>\n",
        "      <td>Montreal, PQ / Chesterville, ON</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>Allison, Mrs. Hudson J C (Bessie Waldo Daniels)</td>\n",
        "      <td>female</td>\n",
        "      <td>25.0000</td>\n",
        "      <td>1</td>\n",
@@ -188,7 +177,6 @@
        "      <td>C22 C26</td>\n",
        "      <td>S</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>Montreal, PQ / Chesterville, ON</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -196,29 +184,22 @@
        "</div>"
       ],
       "text/plain": [
-       "   pclass  survived                                             name     sex  \\\n",
-       "0       1         1                    Allen, Miss. Elisabeth Walton  female   \n",
-       "1       1         1                   Allison, Master. Hudson Trevor    male   \n",
-       "2       1         0                     Allison, Miss. Helen Loraine  female   \n",
-       "3       1         0             Allison, Mr. Hudson Joshua Creighton    male   \n",
-       "4       1         0  Allison, Mrs. Hudson J C (Bessie Waldo Daniels)  female   \n",
+       "   pclass  survived     sex      age  sibsp  parch  ticket      fare    cabin  \\\n",
+       "0       1         1  female  29.0000      0      0   24160  211.3375       B5   \n",
+       "1       1         1    male   0.9167      1      2  113781  151.5500  C22 C26   \n",
+       "2       1         0  female   2.0000      1      2  113781  151.5500  C22 C26   \n",
+       "3       1         0    male  30.0000      1      2  113781  151.5500  C22 C26   \n",
+       "4       1         0  female  25.0000      1      2  113781  151.5500  C22 C26   \n",
        "\n",
-       "       age  sibsp  parch  ticket      fare    cabin embarked boat  body  \\\n",
-       "0  29.0000      0      0   24160  211.3375       B5        S    2     0   \n",
-       "1   0.9167      1      2  113781  151.5500  C22 C26        S   11     0   \n",
-       "2   2.0000      1      2  113781  151.5500  C22 C26        S    0     0   \n",
-       "3  30.0000      1      2  113781  151.5500  C22 C26        S    0   135   \n",
-       "4  25.0000      1      2  113781  151.5500  C22 C26        S    0     0   \n",
-       "\n",
-       "                         home.dest  \n",
-       "0                     St Louis, MO  \n",
-       "1  Montreal, PQ / Chesterville, ON  \n",
-       "2  Montreal, PQ / Chesterville, ON  \n",
-       "3  Montreal, PQ / Chesterville, ON  \n",
-       "4  Montreal, PQ / Chesterville, ON  "
+       "  embarked boat                        home.dest  \n",
+       "0        S    2                     St Louis, MO  \n",
+       "1        S   11  Montreal, PQ / Chesterville, ON  \n",
+       "2        S    0  Montreal, PQ / Chesterville, ON  \n",
+       "3        S    0  Montreal, PQ / Chesterville, ON  \n",
+       "4        S    0  Montreal, PQ / Chesterville, ON  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,20 +211,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'df' is not defined",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   pclass  survived  sex      age  sibsp  parch      fare  cabin  embarked  \\\n",
+      "0       1         1    1  29.0000      0      0  211.3375     79         0   \n",
+      "1       1         1    0   0.9167      1      2  151.5500     19         0   \n",
+      "2       1         0    1   2.0000      1      2  151.5500     19         0   \n",
+      "3       1         0    0  30.0000      1      2  151.5500     19         0   \n",
+      "4       1         0    1  25.0000      1      2  151.5500     19         0   \n",
+      "\n",
+      "   boat  \n",
+      "0     1  \n",
+      "1    27  \n",
+      "2     0  \n",
+      "3     0  \n",
+      "4     0  \n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "labels ['ticket' 'home.dest'] not contained in axis",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-3bfd8817c76a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     23\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     24\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 25\u001b[1;33m \u001b[0mdf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mhandle_non_numerical_data\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     26\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     27\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-43-a631198c3cf2>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     26\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     27\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 28\u001b[1;33m \u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'ticket'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'home.dest'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0minplace\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     29\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     30\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m/root/anaconda3/lib/python3.5/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36mdrop\u001b[1;34m(self, labels, axis, level, inplace, errors)\u001b[0m\n\u001b[0;32m   1614\u001b[0m                 \u001b[0mnew_axis\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlabels\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlevel\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mlevel\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0merrors\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0merrors\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1615\u001b[0m             \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1616\u001b[1;33m                 \u001b[0mnew_axis\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlabels\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0merrors\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0merrors\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1617\u001b[0m             \u001b[0mdropped\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreindex\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m**\u001b[0m\u001b[1;33m{\u001b[0m\u001b[0maxis_name\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mnew_axis\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1618\u001b[0m             \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m/root/anaconda3/lib/python3.5/site-packages/pandas/core/index.py\u001b[0m in \u001b[0;36mdrop\u001b[1;34m(self, labels, errors)\u001b[0m\n\u001b[0;32m   2734\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mmask\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0many\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2735\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0merrors\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[1;34m'ignore'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2736\u001b[1;33m                 \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'labels %s not contained in axis'\u001b[0m \u001b[1;33m%\u001b[0m \u001b[0mlabels\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mmask\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   2737\u001b[0m             \u001b[0mindexer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mindexer\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m~\u001b[0m\u001b[0mmask\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2738\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdelete\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: labels ['ticket' 'home.dest'] not contained in axis"
      ]
     }
    ],
@@ -275,13 +277,16 @@
     "df = handle_non_numerical_data(df)\n",
     "print(df.head())\n",
     "                \n",
-    "df.drop(['ticket'],1,inplace=True)   \n",
+    "df.drop(['ticket','home.dest'],1,inplace=True)\n",
+    "\n",
+    "\n",
+    "\n",
     "                    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
@@ -304,12 +309,11 @@
     {
      "data": {
       "text/plain": [
-       "KMeans(copy_x=True, init='k-means++', max_iter=300, n_clusters=2, n_init=10,\n",
-       "    n_jobs=1, precompute_distances='auto', random_state=None, tol=0.0001,\n",
-       "    verbose=0)"
+       "MeanShift(bandwidth=None, bin_seeding=False, cluster_all=True, min_bin_freq=1,\n",
+       "     seeds=None)"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,24 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "labels = clf.labels_\n",
-    "cluster_centers = clf.cluster_centers_\n",
-    "\n",
-    "original_df['cluster_group'] = np.nan\n",
-    "\n",
-    "for i in range(len(X)):\n",
-    "    original_df['cluster_group']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
@@ -353,21 +340,51 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.26279602750190983\n"
+      "{0: 0.3761980830670926, 1: 1.0, 2: 0.6875, 3: 0.0, 4: 0.0, 5: 1.0}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/root/anaconda3/lib/python3.5/site-packages/pandas/core/indexing.py:115: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  self._setitem_with_indexer(indexer, value)\n"
      ]
     }
    ],
    "source": [
-    "correct = 0\n",
+    "labels = clf.labels_\n",
+    "cluster_centers = clf.cluster_centers_\n",
+    "n_clusters_ = len(np.unique(labels))\n",
+    "\n",
+    "original_df['cluster_group'] = np.nan\n",
+    "\n",
     "for i in range(len(X)):\n",
-    "    predict_me = np.array(X[i].astype(float))\n",
-    "    predict_me = predict_me.reshape(-1,len(predict_me))\n",
-    "    prediction = clf.predict(predict_me)\n",
-    "    if prediction[0] == y[i]:\n",
-    "        correct += 1\n",
-    "        \n",
-    "print(correct/len(X))"
+    "    original_df['cluster_group'].iloc[i] = labels[i]  # what happ-ens here is  iloc refers to the index of the row\n",
+    "    \n",
+    "survival_rates = {}\n",
+    "\n",
+    "for i in range(n_clusters_):\n",
+    "    temp_df= original_df[ (original_df['cluster_group'] == float(i)) ] # original df cluster group is equal to i\n",
+    "                                                                         # we are creating a temporary dataframe only where cluster group label is i\n",
+    "    survival_cluster = temp_df[ (temp_df['survived']==1) ]\n",
+    "    survival_rate = len(survival_cluster)/len(temp_df)\n",
+    "    survival_rates[i] = survival_rate\n",
+    "    \n",
+    "print(survival_rates)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
