--- a/Kaggle/Titanic/Stacking With XGBOOST on Titanic Data.ipynb
+++ b/Kaggle/Titanic/Stacking With XGBOOST on Titanic Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 110,
    "metadata": {
     "collapsed": false
    },
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 111,
    "metadata": {
     "collapsed": false
    },
@@ -150,7 +150,7 @@
        "4      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,12 +158,14 @@
    "source": [
     "train_df = pd.read_csv('train.csv')\n",
     "test_df = pd.read_csv('test.csv')\n",
+    "\n",
+    "PassengerId = test_df['PassengerId']\n",
     "train_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 112,
    "metadata": {
     "collapsed": false
    },
@@ -292,7 +294,7 @@
        "max      6.000000  512.329200  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,19 +305,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 113,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "train_df = train_df.drop(['PassengerId','Name','Ticket'],axis = 1)\n",
-    "test_df = test_df.drop(['Name','Ticket'],axis =1 )"
+    "test_df = test_df.drop(['Name','Ticket','PassengerId'],axis =1 )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 114,
    "metadata": {
     "collapsed": false
    },
@@ -408,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 115,
    "metadata": {
     "collapsed": false
    },
@@ -500,7 +502,7 @@
        "4         0    1   35     8     0       0        0        0"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 116,
    "metadata": {
     "collapsed": false
    },
@@ -524,7 +526,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 117,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -646,7 +648,7 @@
        "Class_2   0.093349 -0.064746  0.015628 -0.116346  0.039070 -0.288585  1.000000"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -657,11 +659,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 118,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Start with makin a skeleton code for training and predicting on sklearn models\n",
     "\n",
@@ -672,31 +685,33 @@
     "SEED = 0\n",
     "NFOLDS = 5\n",
     "kf = KFold(ntrain, n_folds = NFOLDS , random_state = SEED )\n",
-    "\n",
+    "# Provides train/test indices to split data in train test sets. Split dataset into k consecutive folds (without shuffling by default).\n",
+    "# Each fold is then used a validation set once while the k - 1 remaining fold form the training set.\n",
     "# desing a class which helps in training adn crossvalidating baseline models\n",
     "\n",
     "class SklearnHelper(object):\n",
-    "    \n",
-    "    def __init__ (self,clf,seed=0,params =None):\n",
+    "    def __init__(self, clf, seed=0, params=None):\n",
     "        params['random_state'] = seed\n",
     "        self.clf = clf(**params)\n",
-    "        \n",
-    "    def train(self,x_train,y_train):\n",
-    "        self.clf.fit(x_train,y_train)\n",
-    "        \n",
-    "    def predict(self,x):\n",
-    "        return self.predict(x)\n",
+    "\n",
+    "    def train(self, x_train, y_train):\n",
+    "        self.clf.fit(x_train, y_train)\n",
+    "\n",
+    "    def predict(self, x):\n",
+    "        return self.clf.predict(x)\n",
     "    \n",
     "    def fit(self,x,y):\n",
     "        return self.clf.fit(x,y)\n",
     "    \n",
     "    def feature_importances(self,x,y):\n",
-    "        print(self.clf.fit(x,y).feature_importances_)\n"
+    "        print(self.clf.fit(x,y).feature_importances_)\n",
+    "        \n",
+    "len(kf)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 119,
    "metadata": {
     "collapsed": true
    },
@@ -730,16 +745,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 120,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# ---- For the first level classification , we use the foloowing classifiers\n",
+    "#Note the following parameters have not been optimized . They have been arbitrarily chosen \n",
     "\n",
-    "# Put in our parameters for said classifiers\n",
-    "# Random Forest parameters\n",
     "rf_params = {\n",
     "    'n_jobs': -1,\n",
     "    'n_estimators': 500,\n",
@@ -785,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 121,
    "metadata": {
     "collapsed": false
    },
@@ -806,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 122,
    "metadata": {
     "collapsed": false
    },
@@ -822,30 +836,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 123,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[1, 22, 7, ..., 1, 0.0, 0.0],\n",
-       "       [0, 38, 71, ..., 1, 1.0, 0.0],\n",
-       "       [0, 26, 7, ..., 0, 0.0, 0.0],\n",
-       "       ..., \n",
-       "       [0, 28, 23, ..., 1, 0.0, 0.0],\n",
-       "       [1, 26, 30, ..., 0, 1.0, 0.0],\n",
-       "       [1, 32, 7, ..., 0, 0.0, 0.0]], dtype=object)"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/root/anaconda3/lib/python3.5/site-packages/sklearn/ensemble/forest.py:303: UserWarning: Warm-start fitting without increasing n_estimators does not fit new trees.\n",
+      "  warn(\"Warm-start fitting without increasing n_estimators does not \"\n"
+     ]
     }
    ],
    "source": [
-    "x_train"
+    "# Create our OOF train and test predictions. These base results will be used as new features\n",
+    "et_oof_train, et_oof_test = get_oof(et, x_train, y_train, x_test) # Extra Trees\n",
+    "rf_oof_train, rf_oof_test = get_oof(rf,x_train, y_train, x_test) # Random Forest\n",
+    "ada_oof_train, ada_oof_test = get_oof(ada, x_train, y_train, x_test) # AdaBoost \n",
+    "gb_oof_train, gb_oof_test = get_oof(gb,x_train, y_train, x_test) # Gradient Boost\n",
+    "svc_oof_train, svc_oof_test = get_oof(svc,x_train, y_train, x_test) # Support Vector Classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#--------------Second level learning model via XGBoost -----------------------------------#\n",
+    "# Comnbine the training and testing sets from the above model ----------------------------#\n",
+    "\n",
+    "x_train = np.concatenate(( et_oof_train, rf_oof_train, ada_oof_train, gb_oof_train, svc_oof_train), axis=1)\n",
+    "x_test = np.concatenate(( et_oof_test, rf_oof_test, ada_oof_test, gb_oof_test, svc_oof_test), axis=1)\n",
+    "\n",
+    "import xgboost as xgb\n",
+    "gbm = xgb.XGBClassifier(\n",
+    "    #learning_rate = 0.02,\n",
+    " n_estimators= 2000,\n",
+    " max_depth= 4,\n",
+    " min_child_weight= 2,\n",
+    " #gamma=1,\n",
+    " gamma=0.9,                        \n",
+    " subsample=0.8,\n",
+    " colsample_bytree=0.8,\n",
+    " objective= 'binary:logistic',\n",
+    " nthread= -1,\n",
+    " scale_pos_weight=1).fit(x_train, y_train)\n",
+    "predictions = gbm.predict(x_test)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "StackingSubmission = pd.DataFrame({ 'PassengerId': PassengerId,\n",
+    "                            'Survived': predictions })\n",
+    "StackingSubmission.to_csv(\"TitanicSubmission.csv\", index=False)"
    ]
   },
   {
